Fix editor flicker, fix mobile menu

--- a/src/shared/components/navigation/navigation.component.scss
+++ b/src/shared/components/navigation/navigation.component.scss
@@ -1,13 +1,12 @@
 .topnav {
   min-height: 48px;
-
   overflow: hidden;
   background-color: #333;
-
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 2;
 }
 
 .topnav a {
@@ -51,6 +50,9 @@
     top: 0;
     left: 0;
     right: 0;
+
+    -webkit-animation: fadein 0.5s;
+    animation: fadein 0.5s;
   }
   .topnav.responsive .icon {
     position: absolute;
@@ -66,4 +68,13 @@
 
 .right-align {
   float: right !important;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
